<?xml version="1.0"?>
<package format="2">

  <name>driver_pololu_maestro</name>
  <version>1.0.0</version>
  <description>A ROS driver for the Pololu Maestro family of servo controllers.</description>
  <license>MIT</license>

  <author email="pcdangio@gmail.com">Paul D'Angio</author>
  <maintainer email="pcdangio@todo.todo">Paul D'Angio</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <depend>roscpp</depend>
  <depend>serial</depend>

</package>
